// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`CustomAlert Component Snapshot testing hauria de coincidir amb el snapshot amb botó destructive 1`] = `
<Modal
  animationType="fade"
  onRequestClose={[MockFunction]}
  transparent={true}
  visible={true}
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "rgba(0,0,0,0.4)",
        "flex": 1,
        "justifyContent": "center",
        "padding": 20,
      }
    }
  >
    <View
      style={
        {
          "backgroundColor": "white",
          "borderRadius": 12,
          "maxWidth": 520,
          "overflow": "hidden",
          "width": "100%",
        }
      }
    >
      <RCTScrollView
        contentContainerStyle={
          {
            "padding": 16,
          }
        }
      >
        <View>
          <Text
            style={
              {
                "color": "#111827",
                "fontSize": 20,
                "fontWeight": "700",
                "marginBottom": 10,
              }
            }
          >
            Títol Test
          </Text>
          <Text
            style={
              {
                "color": "#111827",
                "fontSize": 14,
                "lineHeight": 20,
                "textAlign": "justify",
              }
            }
          >
            Missatge de prova
          </Text>
        </View>
      </RCTScrollView>
      <View
        style={
          [
            {
              "flexDirection": "row",
              "justifyContent": "center",
              "padding": 12,
            },
            {
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#ef4444",
              "borderRadius": 8,
              "justifyContent": "center",
              "opacity": 1,
              "paddingVertical": 12,
              "width": "100%",
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <Text
              style={
                [
                  {
                    "color": "#111827",
                    "fontSize": 14,
                    "fontWeight": "600",
                    "paddingHorizontal": 8,
                    "textAlign": "center",
                  },
                  false,
                  {
                    "color": "#ffffff",
                  },
                ]
              }
            >
              Eliminar
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</Modal>
`;

exports[`CustomAlert Component Snapshot testing hauria de coincidir amb el snapshot amb múltiples botons 1`] = `
<Modal
  animationType="fade"
  onRequestClose={[MockFunction]}
  transparent={true}
  visible={true}
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "rgba(0,0,0,0.4)",
        "flex": 1,
        "justifyContent": "center",
        "padding": 20,
      }
    }
  >
    <View
      style={
        {
          "backgroundColor": "white",
          "borderRadius": 12,
          "maxWidth": 520,
          "overflow": "hidden",
          "width": "100%",
        }
      }
    >
      <RCTScrollView
        contentContainerStyle={
          {
            "padding": 16,
          }
        }
      >
        <View>
          <Text
            style={
              {
                "color": "#111827",
                "fontSize": 20,
                "fontWeight": "700",
                "marginBottom": 10,
              }
            }
          >
            Títol Test
          </Text>
          <Text
            style={
              {
                "color": "#111827",
                "fontSize": 14,
                "lineHeight": 20,
                "textAlign": "justify",
              }
            }
          >
            Missatge de prova
          </Text>
        </View>
      </RCTScrollView>
      <View
        style={
          [
            {
              "flexDirection": "row",
              "justifyContent": "center",
              "padding": 12,
            },
            false,
          ]
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#f3f4f6",
              "borderRadius": 8,
              "flex": 1,
              "justifyContent": "center",
              "opacity": 1,
              "paddingHorizontal": 8,
              "paddingVertical": 12,
              "textAlign": "center",
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <Text
              style={
                [
                  {
                    "color": "#111827",
                    "fontSize": 14,
                    "fontWeight": "600",
                    "paddingHorizontal": 8,
                    "textAlign": "center",
                  },
                  false,
                  false,
                ]
              }
            >
              Cancel·lar
            </Text>
          </View>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#FF6900",
              "borderRadius": 8,
              "flex": 1,
              "justifyContent": "center",
              "marginLeft": 8,
              "opacity": 1,
              "paddingVertical": 12,
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <Text
              style={
                [
                  {
                    "color": "#111827",
                    "fontSize": 14,
                    "fontWeight": "600",
                    "paddingHorizontal": 8,
                    "textAlign": "center",
                  },
                  {
                    "color": "#ffffff",
                  },
                  false,
                ]
              }
            >
              Acceptar
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</Modal>
`;

exports[`CustomAlert Component Snapshot testing hauria de coincidir amb el snapshot amb un botó 1`] = `
<Modal
  animationType="fade"
  onRequestClose={[MockFunction]}
  transparent={true}
  visible={true}
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "rgba(0,0,0,0.4)",
        "flex": 1,
        "justifyContent": "center",
        "padding": 20,
      }
    }
  >
    <View
      style={
        {
          "backgroundColor": "white",
          "borderRadius": 12,
          "maxWidth": 520,
          "overflow": "hidden",
          "width": "100%",
        }
      }
    >
      <RCTScrollView
        contentContainerStyle={
          {
            "padding": 16,
          }
        }
      >
        <View>
          <Text
            style={
              {
                "color": "#111827",
                "fontSize": 20,
                "fontWeight": "700",
                "marginBottom": 10,
              }
            }
          >
            Títol Test
          </Text>
          <Text
            style={
              {
                "color": "#111827",
                "fontSize": 14,
                "lineHeight": 20,
                "textAlign": "justify",
              }
            }
          >
            Missatge de prova
          </Text>
        </View>
      </RCTScrollView>
      <View
        style={
          [
            {
              "flexDirection": "row",
              "justifyContent": "center",
              "padding": 12,
            },
            {
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#FF6900",
              "borderRadius": 8,
              "justifyContent": "center",
              "opacity": 1,
              "paddingVertical": 12,
              "width": "100%",
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <Text
              style={
                [
                  {
                    "color": "#111827",
                    "fontSize": 14,
                    "fontWeight": "600",
                    "paddingHorizontal": 8,
                    "textAlign": "center",
                  },
                  {
                    "color": "#ffffff",
                  },
                  false,
                ]
              }
            >
              OK
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</Modal>
`;

exports[`CustomAlert Component Snapshot testing hauria de coincidir amb el snapshot quan no és visible 1`] = `null`;
